Converted privacy policy into HTML and replaced it with the template in privacy.html

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+`<!DOCTYPE html>
 <html lang="EN">
 
 <head>
@@ -76,70 +76,88 @@
                 </div>
                 <section class="row">
                     <h1>Privacy Policy</h1>
-
-                    <p>We at mywebclass.org are committed to protecting your privacy. This Privacy Policy explains what
-                        information we collect from you when you visit our website, how we use it, and how we protect
-                        it. By using our website, you agree to the terms of this Privacy Policy.</p>
-                    <h2>Information we collect</h2>
-                    <p>We may collect the following information from you when you visit our website:</p>
+                    <h2>Introduction</h2>
+                    <p>We are committed to protecting your privacy and handling your personal data in an open and
+                        transparent manner. This Privacy Policy explains how we collect, use, and share your personal
+                        data when you use our website MyWebClass.org. Please read this Privacy Policy carefully to
+                        understand our practices regarding your personal data.</p>
+                    <h2>Personal Data We Collect</h2>
+                    <p>We may collect the following categories of personal data from you when you use our Site:</p>
                     <ul>
-                        <li>Personal information such as your name and email address, if you choose to provide it to
-                            us.
+                        <li>Name</li>
+                        <li>Email address</li>
+                        <li>IP address</li>
+                        <li>Location data</li>
+                        <li>Browsing history</li>
+                    </ul>
+                    <p>We collect this personal data to provide services to you, improve our Site, and for marketing
+                        purposes. We may also collect personal data from third-party sources, such as social media
+                        platforms and public databases.</p>
+
+                    <h2>Use of Personal Data</h2>
+                    <p>We use your personal data for the following purposes:</p>
+                    <ul>
+                        <li>To provide services to you, including processing orders, responding to inquiries, and
+                            delivering content.
                         </li>
-                        <li>Information about your use of the website, such as pages visited, time spent on the site,
-                            and links clicked.
+                        <li>To improve our Site, including analyzing user behavior, personalizing your experience, and
+                            developing new features.
                         </li>
-                        <li>Information about your device, such as your IP address, browser type, and operating
-                            system.
+                        <li>For marketing purposes, including sending promotional emails, advertising, and creating
+                            personalized content and advertising.
                         </li>
                     </ul>
-                    <h2>How we use your information</h2>
-                    <p>We use the information we collect from you for the following purposes:</p>
-                    <ul>
-                        <li>To improve our website and the user experience.</li>
-                        <li>To analyze user behavior and measure the effectiveness of our content and marketing
-                            efforts.
-                        </li>
-                        <li>To communicate with you about our products and services, if you have provided us with your
-                            contact information.
-                        </li>
-                        <li>To comply with legal obligations.</li>
-                    </ul>
-                    <h2>Google Analytics</h2>
-                    <p>We use Google Analytics to collect information about your use of our website. Google Analytics
-                        collects information such as how often users visit the site, what pages they visit when they do
-                        so, and what other sites they used prior to coming to our website. We use the information we get
-                        from Google Analytics to improve our website and the user experience. Google Analytics collects
-                        only the IP address assigned to you on the date you visit our website, rather than your name or
-                        other identifying information. We do not combine the information collected through the use of
-                        Google Analytics with personally identifiable information. Google Analytics plants a permanent
-                        cookie on your web browser to identify you as a unique user the next time you visit our website.
-                        This cookie cannot be used by anyone other than Google. Google’s ability to use and share
-                        information collected by Google Analytics about your visits to our website is restricted by the
-                        Google Analytics Terms of Use and the Google Privacy Policy.</p>
-                    <h2>Data retention and security</h2>
-                    <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
-                        it was collected, unless a longer retention period is required by law. We take reasonable
-                        measures to protect the information we collect from loss, theft, misuse, and unauthorized
-                        access, disclosure, alteration, and destruction.</p>
-                    <h2>Data retention and security</h2>
-                    <p>We retain the information we collect for as long as necessary to fulfill the purposes for which
-                        it was collected, unless a longer retention period is required by law. We take reasonable
-                        measures to protect the information we collect from loss, theft, misuse, and unauthorized
-                        access, disclosure, alteration, and destruction.</p>
-                    <h2>Your rights</h2>
-                    <p>You have the right to access, correct, and delete your personal information. You also have the
-                        right to object to the processing of your personal information and to withdraw your consent to
-                        the processing of your personal information. To exercise these rights, please contact us at
-                        [contact email address].</p>
-                    <h2>Changes to this Privacy Policy</h2>
-                    <p>We may update this Privacy Policy from time to time. We will notify you of any changes by posting
-                        the new Privacy Policy on this page. We recommend that you review this Privacy Policy
-                        periodically for any changes.</p>
-                    <h2>Contact us</h2>
-                    <p>If you have any questions about this Privacy Policy, please contact us at [contact email
-                        address].</p>
 
+                    <h2>Sharing of Personal Data</h2>
+                    <p>We may share your personal data with the following third-party service providers:</p>
+                    <ul>
+                        <li>Payment processors</li>
+                        <li>Email service providers</li>
+                        <li>Analytics providers</li>
+                        <li>Advertising networks</li>
+                    </ul>
+                    <p>We may also share personal data with government or law enforcement authorities if required by law
+                        or to protect our legal rights or those of our users.</p>
+
+                    <h2>Retention of Personal Data</h2>
+                    <p>We retain your personal data for as long as necessary to provide services to you and for other
+                        legitimate purposes, such as complying with legal obligations, resolving disputes, and enforcing
+                        our agreements.</p>
+
+                    <h2>Data Subject Rights</h2>
+                    <p>Under the GDPR, you have the following rights with respect to your personal data:</p>
+                    <ul>
+                        <li>The right to access and obtain a copy of your personal data.</li>
+                        <li>The right to rectify any inaccurate or incomplete personal data.</li>
+                        <li>The right to erasure of your personal data under certain circumstances.</li>
+                        <li>The right to restrict processing of your personal data under certain circumstances.</li>
+                        <li>The right to object to processing of your personal data under certain circumstances.</li>
+                        <li>The right to data portability under certain circumstances.</li>
+                    </ul>
+                    <p>To exercise your rights under the GDPR, please contact us using the information provided in the
+                        "Contact Us" section below.</p>
+
+                    <h2>Cookies</h2>
+                    <p>We may use cookies and similar technologies to collect and store information about your use of
+                        our Site. Please see our Cookie Policy [insert link to cookie policy] for more information.</p>
+
+                    <h2>International Data Transfers</h2>
+                    <p>Your personal data may be transferred to and processed in countries outside of the European
+                        Economic
+                        Area (EEA), which may have data protection laws that are different from those of your country of
+                        residence. We will take appropriate measures to ensure that personal data remains protected and
+                        is
+                        only transferred in accordance with applicable law.</p>
+
+                    <h2>Contact US</h2>
+                    <p>If you have any questions or concerns about our Privacy Policy, please contact us at [insert
+                        contact email or address].</p>
+
+                    <h2>Changes To This Privacy Policy</h2>
+                    <p>We reserve the right to update this Privacy Policy at any time to reflect changes to our data
+                        processing practices or applicable law. If we make material changes to this Privacy Policy, we
+                        will notify you by email or by posting a notice on our Site. We encourage you to review this
+                        Privacy Policy periodically for any changes.</p>
                 </section>
 
 
@@ -191,4 +209,4 @@
     </div>
 </body>
 
-</html>
+</html>`
