Converted privacy policy into HTML and replaced it with the template in privacy.html

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -1,4 +1,4 @@
-`<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="EN">
 
 <head>
@@ -207,6 +207,7 @@
             </div>
         </footer>
     </div>
+</div>
 </body>
 
-</html>`
+</html>
