edited content and privacy

--- a/src/content.html
+++ b/src/content.html
@@ -15,8 +15,8 @@
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Privacy Policy" name="keywords">
-    <meta content="Keith Williams" name="author"/>
-    <meta content="A project to provide educational resources to web development teachers" name="description">
+    <meta name="author" content="Allie He, Zach Garcia, Kaan Okul"/>
+    <meta name="description" content="A project that creates a hub to help web developers">
 
     <!--OpenGraph meta -->
     <meta content="" property="og:title"/>
