--- a/src/privacy.html
+++ b/src/privacy.html
@@ -14,9 +14,9 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!--Basic meta info -->
-    <meta content="My Webclass Homepage | Our Story" name="keywords">
-    <meta content="Keith Williams" name="author"/>
-    <meta content="The story and mission of MyWebClass.org" name="description">
+    <meta content="My Webclass Homepage | Privacy Policy" name="keywords">
+    <meta name="author" content="Allie He, Zach Garcia, Kaan Okul"/>
+    <meta name="description" content="the privacy policy of the website">
 
     <!--OpenGraph meta -->
     <meta content="" property="og:title"/>
