--- a/src/story.html
+++ b/src/story.html
@@ -15,7 +15,7 @@
 
     <!--Basic meta info -->
     <meta content="My Webclass Homepage | Our Story" name="keywords">
-    <meta content="Keith Williams" name="author"/>
+    <meta name="author" content="Allie He, Zach Garcia, Kaan Okul"/>
     <meta content="The story and mission of MyWebClass.org" name="description">
 
     <!--OpenGraph meta -->
@@ -80,9 +80,11 @@
                 </div>
                     <section class="row">
                             <h2 class="h4 mb-4">Mission</h2>
-                            <p>Our mission is to create a community of people committed to helping students of all ages
-                                and backgrounds succeed in the modern software industry by providing educational
-                                opportunities and a practical, hands-on learning experience.</p>
+                            <p>As web development enthusiasts, our mission is to create an educational hub website that provides 
+                                developers with relevant and up-to-date information on web development, resources, and a community.
+                                So that web developers can improve their skills, stay current with the latest web development trends,
+                                and join or create a community that allows developers to meet new people.
+                            </p>
 
                             <h2 class="h4 mb-4">Values</h2>
                             <ul>
@@ -113,16 +115,13 @@
                                 reliable platform that makes the most of everyone's time.</p>
 
                             <h2 class="h4 mb-4">Origin</h2>
-                            <p>Mywebclass.org was founded in 2023 by Keith Williams, a University Lecturer at New Jersey
-                                Institute of Technology with over 30 years of experience as a software engineer,
-                                entrepreneur, and 17 years of experience as a university lecturer and in k-12 education.
-                                Keith founded mywebclass.org to help bridge the gap between educators and professionals
-                                in the software industry by creating a community of people committed to helping students
-                                of all ages and backgrounds succeed.</p>
+                            <p>Mywebclass.org was founded in 2023 by Kaan Okul, Zachery Garcia, and Allie He. We are three college students
+                                who are enthusiast about web developement and we hope to create a community that allows developers around the 
+                                world to connect with each other and also provides resources. 
+                            </p>
 
                             <p>Thank you for your interest in mywebclass.org. Together, we can create a community of
-                                people committed to helping students of all ages and backgrounds succeed in the modern
-                                software industry.</p>
+                                developers with shared intrest, and help each other to become better devleopers.</p>
                         </div>
                     </section>
 
