--- a/src/privacy.html
+++ b/src/privacy.html
@@ -86,7 +86,7 @@
                         it. By using our website, you agree to the terms of this Privacy Policy.</p>
                     <h2>Information we collect</h2>
                     <p>We may collect the following information from you when you visit our website:</p>
-                    <ul>
+                    <ol>
                         <li>Personal information such as your name and email address, if you choose to provide it to
                             us.
                         </li>
@@ -96,10 +96,10 @@
                         <li>Information about your device, such as your IP address, browser type, and operating
                             system.
                         </li>
-                    </ul>
+                    </ol>
                     <h2>How we use your information</h2>
                     <p>We use the information we collect from you for the following purposes:</p>
-                    <ul>
+                    <ol>
                         <li>To improve our website and the user experience.</li>
                         <li>To analyze user behavior and measure the effectiveness of our content and marketing
                             efforts.
@@ -108,9 +108,9 @@
                             contact information.
                         </li>
                         <li>To comply with legal obligations.</li>
-                    </ul>
+                    </ol>
                     <h2>Google Analytics</h2>
-                    <p>We use Google Analytics to collect information about your use of our website. Google Analytics
+                    <p>We use Google Analytics to collect information about how you use of our website. Google Analytics
                         collects information such as how often users visit the site, what pages they visit when they do
                         so, and what other sites they used prior to coming to our website. We use the information we get
                         from Google Analytics to improve our website and the user experience. Google Analytics collects
