changed the information of privacy and story

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -75,7 +75,7 @@
             <main class="col-md-9 ms-sm-auto col-lg-9 px-md-4">
 
                 <h1 class="fw-bold border-bottom" id="title">Privacy Policy</h1>
-                <div class="text-muted mb-3 ">By <a href="#">Author Name</a><span class="text-muted me-3"> Last Updated:
+                <div class="text-muted mb-3 ">By <a href="#">Allie He</a><span class="text-muted me-3"> Last Updated:
               January 1, 2022</span> <span class="text-muted" id="readingTime">0</span>
                 </div>
                 <section class="row">
