--- a/src/story.html
+++ b/src/story.html
@@ -88,29 +88,29 @@
 
                             <h2 class="h4 mb-4">Values</h2>
                             <ul>
-                                <li><strong>People:</strong> We value the people in our community and believe that every
-                                    student and teacher has the potential to succeed. We strive to create an inclusive
+                                <li><strong>People.</strong> We value the people in our community and believe that every
+                                   developers sould have a space to create a community. We strive to create an inclusive
                                     and supportive environment where everyone feels welcome to learn and grow.  
                                 </li>
-                                <li><strong>Learning:</strong> We believe that learning is a lifelong process and that
+                                <li><strong>Learning.</strong> We believe that learning is a lifelong process and that
                                     everyone has something to teach and something to learn. We are committed to
-                                    providing educational opportunities that help students and teachers gain experience
-                                    with new technologies and learn advanced software engineering concepts.
+                                    providing opportunities that help developers gain experience
+                                    with new skills and job opportunities.
                                 </li>
-                                <li><strong>Efficiency:</strong> We recognize that time is a valuable resource, and we
+                                <li><strong>Efficiency.</strong> We recognize that time is a valuable resource, and we
                                     strive to make the most of it. We aim to provide a practical, hands-on learning
-                                    experience that allows students and teachers to develop the skills they need to
-                                    succeed in the modern software industry quickly.
+                                    experience that allows developers to develop the skills they need to
+                                    succeed in the industry.
                                 </li>
-                                <li><strong>Dependability:</strong> We understand the importance of being reliable and
-                                    consistent. We aim to provide a stable and dependable platform for students and
-                                    teachers to learn and collaborate.
+                                <li><strong>Dependability.</strong> We understand the importance of being reliable and
+                                    consistent. We aim to provide a stable and dependable platform for developers to 
+                                    learn, communicate, and collaborate.
                                 </li>
                             </ul>
                             <p>Each of these values supports our mission by creating a welcoming and supportive
-                                environment for students and teachers to learn and grow. Our focus on people ensures
+                                environment for developers to learn and grow. Our focus on people ensures
                                 that everyone feels included and valued, and our commitment to learning provides
-                                educational opportunities that help students and teachers succeed in the modern software
+                                educational opportunities that help developers succeed in the modern software
                                 industry. Our emphasis on efficiency and dependability allows us to provide a practical,
                                 reliable platform that makes the most of everyone's time.</p>
 
