--- a/src/story.html
+++ b/src/story.html
@@ -120,7 +120,7 @@
                                 world to connect with each other and also provides resources. 
                             </p>
 
-                            <p>Thank you for your interest in mywebclass.org. Together, we can create a community of
+                            <p>Thank you for your interest in mywebclass.org. We believe we can create a community of
                                 developers with shared intrest, and help each other to become better devleopers.</p>
                         </div>
                     </section>
