--- a/src/Front Page.html
+++ b/src/Front Page.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" href="FrontPage.css">
 </head>
 <body>
-$END$
+<h1>This is the Front Page</h1>
+<a href="privacy.html">Privacy Policy</a>
+<a href="http://www.example.com">Link text</a>
 </body>
 </html>
