updated errors on Front Page

--- a/src/Front Page.html
+++ b/src/Front Page.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="FrontPage.css">
+    <link rel="stylesheet" href="../Style/FrontPage.css">
 </head>
 <body>
 <h1>This is the Front Page</h1>
 <a href="privacy.html">Privacy Policy</a>
-<a href="http://www.example.com">Link text</a>
 </body>
 </html>
