--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
 <!--Basic meta info -->
 <meta name="keywords" content="My Webclass Homepage">
-<meta name="author" content="Keith Williams"/>
+<meta name="author" content="Mithil Patel"/>
 <meta name="description" content="A project to help educators integrate new technoliges into their teaching">
 
 <!--OpenGraph meta -->
