--- a/src/index.html
+++ b/src/index.html
@@ -1,112 +1,106 @@
 <!DOCTYPE html>
-<html lang="EN">
+<html lang="en">
 <head>
-    <title>MyWebClass.org</title>
-<meta charset="UTF-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>MyWebClass Homepage</title>
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Basic meta info -->
+    <meta name="keywords" content="My Webclass Homepage">
+    <meta name="author" content="Mithil Patel">
+    <meta name="description" content="A project to help educators integrate new technologies into their teaching">
 
-<!--Basic meta info -->
-<meta name="keywords" content="My Webclass Homepage">
-<meta name="author" content="Mithil Patel"/>
-<meta name="description" content="A project to help educators integrate new technoliges into their teaching">
+    <!-- OpenGraph meta -->
+    <meta property="og:title" content="">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="assets/images/logo.png">
+    <meta property="og:url" content="">
 
-<!--OpenGraph meta -->
-<meta property="og:title" content=""/>
-<meta property="og:description" content=""/>
-<meta property="og:image" content="assets/images/logo.png"/>
-<meta property="og:url" content=""/>
+    <style>
+        body {
+            background-color: #F8F8F8;
+            font-family: Arial, sans-serif;
+        }
 
-<style>
-    body {
-        background-color: #F8F8F8;
-        font-family: Arial, sans-serif;
-    }
+        .header {
+            background-color: #000000;
+            color: #FFFFFF;
+            display: flex;
+            justify-content: space-between;
+            padding: 20px;
+        }
 
-    .header {
-        background-color: #000000;
-        color: #FFFFFF;
-        display: flex;
-        justify-content: space-between;
-        padding: 20px;
-    }
+        .nav-link {
+            color: #FFFFFF;
+        }
 
-    .nav-link {
-        color: #FFFFFF;
-    }
+        .banner {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 80vh;
+        }
 
-    .banner {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 80vh;
-    }
+        .banner h1 {
+            font-size: 50px;
+            font-weight: bold;
+            text-align: center;
+            margin-bottom: 30px;
+        }
 
-    .banner h1 {
-        font-size: 50px;
-        font-weight: bold;
-        text-align: center;
-        margin-bottom: 30px;
-    }
+        .banner p {
+            font-size: 25px;
+            text-align: center;
+            margin-bottom: 30px;
+        }
 
-    .banner p {
-        font-size: 25px;
-        text-align: center;
-        margin-bottom: 30px;
-    }
+        .btn-start {
+            background-color: #53B8BB;
+            color: #FFFFFF;
+            font-weight: bold;
+            border-radius: 20px;
+            padding: 10px 20px;
+        }
 
-    .btn-start {
-        background-color: #53B8BB;
-        color: #FFFFFF;
-        font-weight: bold;
-        border-radius: 20px;
-        padding: 10px 20px;
-    }
+        .image-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 50px;
+        }
 
-    .image-container {
-        display: flex;
-        justify-content: center;
-        margin-top: 50px;
-    }
+        .image-container img {
+            width: 80%;
+        }
 
-    .image-container img {
-        width: 80%;
-    }
+        .footer {
+            background-color: #E9ECEF;
+            padding: 50px 0;
+        }
 
-    .footer {
-        background-color: #E9ECEF;
-        padding: 50px 0;
-    }
+        .footer h5 {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 20px;
+        }
 
-    .footer h5 {
-        font-size: 20px;
-        font-weight: bold;
-        margin-bottom: 20px;
-    }
+        .footer p {
+            margin-bottom: 20px;
+        }
 
-    .footer p {
-        margin-bottom: 20px;
-    }
+        .footer label {
+            display: block;
+            margin-bottom: 10px;
+        }
 
-    .footer input[type=text] {
-        width: 60%;
-        padding: 10px;
-        border-radius: 20px;
-        border: none;
-        margin-bottom: 10px;
-    }
-
-    .footer button {
-        background-color: #53B8BB;
-        color: #FFFFFF;
-        font-weight: bold;
-        border-radius: 20px;
-        padding: 10px 20px;
-        border: none;
-    }
-</style>
-    </head>
+        .footer input[type=text] {
+            width: 60%;
+            padding: 10px;
+            border-radius: 20px;
+            border: none;
+            margin
+    </style>
+</head>
 <body>
     <header class="header">
         <div>
@@ -123,6 +117,9 @@
     <main>
         <div class="banner">
             <h1>Teaching Made Easier</h1>
-            <p>This is a website for teachers to help them educate their students regarding the latest software</p>
+            <p>This is a website for teachers to help them educate their students regarding the latest software.</p>
         </div>
     </main>
+</body>
+</html>
+
